# ros2_dotnet

./: .aderc  .editorconfig  .gitignore  .vsts-ci.yml  NOTICE  README.md  ament_dotnet_uwp.repos  appveyor.yml  azure-pipelines.yml  ros2_dotnet.repos  ros2_dotnet.sln  ros2_dotnet_crystal.repos  ros2_dotnet_crystal_standalone.repos  ros2_dotnet_foxy.repos  ros2_dotnet_humble.repos  ros2_dotnet_iron.repos  ros2_dotnet_rolling.repos  ros2_dotnet_uwp.repos  rosidl_typesupport_ros2_dotnet.patch  rosidl_typesupport_ros2_dotnet_ci.patch  rosidl_typesupport_ros2_uwp.patch
.github/workflows/: build.yml  build_desktop.yml  build_linux.yml  build_linux_ade.yml  build_uwp.yml  ci.repos  uwp_ament.repos  uwp_ros2_dotnet.repos
ament_cmake_export_assemblies/: CMakeLists.txt  ament_cmake_export_assemblies-extras.cmake  package.xml
ament_cmake_export_assemblies/cmake/: ament_cmake_export_assemblies-extras.cmake.in  ament_cmake_export_assemblies_package_hook.cmake  ament_export_assemblies.cmake
ci/: build-all-steps.yml
ci-scripts/: build-uwp.bat  build-windows-uwp.bat
dotnet_cmake_module/: CMakeLists.txt  dotnet_cmake_module-extras.cmake.in  package.xml
dotnet_cmake_module/cmake/Modules/: FindDotNETExtra.cmake
dotnet_cmake_module/resource/: msbuild_project.csproj.dotnet.in  msbuild_project.csproj.uwp.in
rclcppdotnet/: CMakeLists.txt  RclCppDotnet.cs  TransformListener.cs  package.xml  rclcppdotnet.cpp  rclcppdotnet.h  rclcppdotnet_macros.h  transform_listener.cpp  transform_listener.h
rcldotnet/: .gitignore  ActionClient.cs  ActionClientGoalHandle.cs  ActionDefinitionStaticMemberCache.cs  ActionGoalStatus.cs  ActionServer.cs  ActionServerGoalHandle.cs  CMakeLists.txt  Client.cs  Clock.cs  Exceptions.cs  GuardCondition.cs  GuidExtensions.cs  IClient.cs  INode.cs  IPublisher.cs  IService.cs  IServiceBase.cs  ISubscription.cs  ISubscriptionBase.cs  MessageStaticMemberCache.cs  Node.cs  Publisher.cs  QoSProfileDelegates.cs  QosProfile.cs  RCLException.cs  RCLExceptionHelper.cs  RCLRet.cs  RCLdotnet.cs  README.md  SafeActionClientHandle.cs  SafeActionGoalHandle.cs  SafeActionServerHandle.cs  SafeClientHandle.cs  SafeClockHandle.cs  SafeGuardConditionHandle.cs  SafeNodeHandle.cs  SafePublisherHandle.cs  SafeQosProfileHandle.cs  SafeRequestIdHandle.cs  (+34 more)
rcldotnet/ParameterHandling/: ParameterDelegates.cs  ParameterHandler.cs  SafeRclParamsHandle.cs
rcldotnet/ParameterHandling/Exceptions/: InvalidParameterTypeException.cs  ParameterException.cs  ParameterImmutableException.cs  ParameterNotDeclaredException.cs  ParameterTypeMismatchException.cs
rcldotnet/ParameterInfrastructure/: Parameter.cs  ParameterBool.cs  ParameterServer.cs
rcldotnet/Properties/: AssemblyInfo.cs  rcldotnet_msbuild.rd.xml
rcldotnet/QoS/: QoSProfileDelegates.cs  QosProfile.cs
rcldotnet/src/: _rclcs.c
rcldotnet/src/dotnet/: .gitignore  Clock.cs  Constants.cs  Context.cs  Enums.cs  Exceptions.cs  INode.cs  IPublisher.cs  IPublisherBase.cs  ISubscription.cs  ISubscriptionBase.cs  MarshallingHelpers.cs  NativeMethods.cs  NativeTypes.cs  Node.cs  Publisher.cs  QualityOfServiceProfile.cs  Rclcs.cs  Subscription.cs  Utils.cs  WaitSet.cs  packages.config  rclcs.csproj
rcldotnet/src/dotnet/Test/: ClockTest.cs  CreateNodeTest.cs  InitShutdownTest.cs  LargeMessageTest.cs  MessagesTest.cs  NativeMetodsTest.cs  NodeTest.cs  SubscriptionTest.cs  TestUtils.cs  WaitSetTest.cs
rcldotnet/test/: test_actions.cs  test_guard_conditions.cs  test_messages.cs  test_services.cs
rcldotnet_common/: CMakeLists.txt  DllLoadUtils.cs  DllLoadUtils_uwp.cs  IRosActionDefinition.cs  IRosActionFeedbackMessage.cs  IRosActionGetResultRequest.cs  IRosActionGetResultResponse.cs  IRosActionSendGoalRequest.cs  IRosActionSendGoalResponse.cs  IRosMessage.cs  IRosServiceDefinition.cs  Interfaces.cs  RCLExceptionHelper.cs  RCLRet.cs  Ret.cs  package.xml
rcldotnet_examples/: CMakeLists.txt  Program.cs  RCLDotnetActionClient.cs  RCLDotnetActionServer.cs  RCLDotnetClient.cs  RCLDotnetGuardCondition.cs  RCLDotnetListener.cs  RCLDotnetServer.cs  RCLDotnetService.cs  RCLDotnetTalker.cs  package.xml  project.json.dotnet.in
rcldotnet_tests/: CMakeLists.txt  package.xml  test_messages.cs
ros2_dotnet_utils/: CMakeLists.txt  DllLoadUtils.cs  Interfaces.cs  RCLdotnetProxy.cs  package.xml  project.json.dotnet
rosidl_generator_cs/: .gitignore  CMakeLists.txt  package.xml  rosidl_generator_cs-extras.cmake.in
rosidl_generator_cs/cmake/: custom_command.cmake  register_cs.cmake  rosidl_generator_cs_generate_interfaces.cmake  rosidl_generator_cs_get_typesupports.cmake
rosidl_generator_cs/msg/: Primitives.msg  StringArrays.msg  Strings.msg  Various.msg
rosidl_generator_cs/resource/: _msg.cs.em  _msg_pkg_typesupport_entry_point.c.em  _msg_support.c.em  _srv.cs.em
rosidl_generator_cs/rosidl_generator_cs/: __init__.py  generate_cs_impl.py
rosidl_generator_dotnet/: CMakeLists.txt  package.xml  rosidl_generator_dotnet-extras.cmake.in
rosidl_generator_dotnet/cmake/: register_dotnet.cmake  rosidl_generator_dotnet_generate_action_interfaces.cmake  rosidl_generator_dotnet_generate_interfaces.cmake  rosidl_generator_dotnet_get_typesupports.cmake
rosidl_generator_dotnet/msg/: Constants.msg  Nested.msg  Primitives.msg  Various.msg
rosidl_generator_dotnet/resource/: action.c.em  action.cs.em  action.h.em  idl.c.em  idl.cs.em  idl.h.em  msg.c.em  msg.cs.em  msg.cs.template  msg.h.em  msg_support.entry_point.c.template  msg_support.entry_point.h.template  nuget.config.in  nuspec.in  project.json.dotnet.in  srv.c.em  srv.cs.em  srv.h.em  srv.msg.c.em  srv.msg.cs.em  srv.msg.h.em
rosidl_generator_dotnet/rosidl_generator_dotnet/: __init__.py
tools/ade_image/: Dockerfile  apt-packages  entrypoint
