<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rcldotnet</name>
  <version>0.0.0</version>
  <description>C# Binding for rcl</description>
  <maintainer email="samuel@dynoroboitcs.se">Samuel Lindgren</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_assemblies</buildtool_depend>
  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rcldotnet_common</buildtool_depend>
  <buildtool_depend>rosidl_generator_cs</buildtool_depend>
  <buildtool_depend>builtin_interfaces</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosidl_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
