<?xml version="1.0"?>
<package format="2">
  <name>rcldotnet</name>
  <version>0.0.0</version>
  <description>Package containing the .NET client.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_assemblies</buildtool_depend>
  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>rcldotnet_common</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <build_depend>rmw_implementation_cmake</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rcl_action</build_depend>
  <build_depend>rmw</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rcl_action</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>

  <test_depend>std_msgs</test_depend>
  <test_depend>test_msgs</test_depend>
  <test_depend>builtin_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
