<?xml version="1.0"?>
<package format="2">
  <name>rcldotnet_common</name>
  <version>0.0.0</version>
  <description>Assorted utilities for the .NET client.</description>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>dotnet_cmake_module</buildtool_depend>
  <buildtool_depend>ament_cmake_export_assemblies</buildtool_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
